BJS2-40520: Полностью закончил задачу 7/7
Fixed filter method
Fixed validation

All tests are rerited