@@ -1,11 +1,13 @@
 package school.faang.user_service.service.event;
 
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.stereotype.Component;
 import school.faang.user_service.dto.event.EventDto;
 import school.faang.user_service.dto.event.EventFilterDto;
+import school.faang.user_service.entity.Skill;
 import school.faang.user_service.entity.event.Event;
-import school.faang.user_service.exception.DataValidationException;
 import school.faang.user_service.filter.EventFilter;
 import school.faang.user_service.mapper.EventMapper;
 import school.faang.user_service.repository.event.EventRepository;
@@ -13,7 +15,7 @@ import school.faang.user_service.service.user.UserService;
 import school.faang.user_service.validation.event.EventValidation;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Component
 @RequiredArgsConstructor
@@ -22,16 +24,20 @@ public class EventService {
     private final EventRepository eventRepository;
     private final EventMapper eventMapper;
     private final UserService userService;
-    private final EventFilter eventFilter;
+    private final List<EventFilter> eventFilters;
 
     public EventDto create(EventDto eventDto) {
-        eventValidation.validateEventDto(eventDto, userService);
+        List<Long> skillsId = userService.findById(eventDto.getOwnerId()).getSkills().stream()
+                .map(Skill::getId)
+                .toList();
+
+        eventValidation.validateEventDto(eventDto, skillsId);
         Event event = eventRepository.save(eventMapper.dtoToEvent(eventDto));
         return eventMapper.eventToDto(event);
     }
 
     private Event findEventById(long eventId) {
-        return eventRepository.findById(eventId).orElseThrow(() -> new DataValidationException("Event id not found"));
+        return eventRepository.findById(eventId).orElseThrow(() -> new EntityNotFoundException("Event id not found"));
     }
 
     public EventDto getEvent(long eventId) {
@@ -39,30 +45,34 @@ public class EventService {
         return eventMapper.eventToDto(findEvent);
     }
 
-    public List<EventDto> getEventsByFilter(EventFilterDto filter) {
-        List<Event> events = eventRepository.findAll();
-        List<Event> filteredEvents = eventFilter.filterEvents(events, filter);
-        return filteredEvents.stream()
+    public List<EventDto> getEventsByFilter(EventFilterDto filters) {
+        Stream<Event> events = eventRepository.findAll().stream();
+        return eventFilters.stream()
+                .filter(filter -> filter.isApplicable(filters))
+                .reduce(events, ((eventStream, filter) -> filter.apply(eventStream, filters)), (e1, e2) -> e1)
                 .map(eventMapper::eventToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void deleteEvent(long evenId) {
         eventRepository.deleteById(evenId);
     }
 
-    public EventDto updateEvent(EventDto eventDto) {
+    public EventDto updateEvent(@NotNull EventDto eventDto) {
         Event event = findEventById(eventDto.getId());
-        eventValidation.validateEventDto(eventDto, userService);
-        Event updatedEvent = eventMapper.dtoToEvent(eventDto);
-        updatedEvent.setId(event.getId());
+        List<Long> skillsId = userService.findById(eventDto.getOwnerId()).getSkills().stream()
+                .map(Skill::getId)
+                .toList();
+
+        eventValidation.validateEventDto(eventDto, skillsId);
+        Event updatedEvent = eventMapper.dtoToEventWithId(eventDto, event.getId());
         Event savedEvent = eventRepository.save(updatedEvent);
         return eventMapper.eventToDto(savedEvent);
     }
 
     public List<EventDto> getOwnedEvents(long userId) {
-       List<Event> events =  eventRepository.findAllByUserId(userId);
-       return eventMapper.toDtoList(events);
+        List<Event> events = eventRepository.findAllByUserId(userId);
+        return eventMapper.toDtoList(events);
     }
 
     public List<EventDto> getParticipatedEvents(long userId) {
